[package]
name = "poche"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version="0.13.2",features=["webp"]}
bevy-inspector-egui = "0.24.0"
bevy_rts_camera = "0.7.0"
itertools = "0.13.0"
meshtext = "0.3.0"
rand = "0.8.5"
